tests/error/switch_in.gw
// [contains] swith inside an other switch
switch(maybe) {
	switch(maybe) {
 	}
}
